feat: 完善租户品牌与文件引用字段治理